welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: expected class or object definition
def vuBiscuit():Boolean = {
^Program:25: error: Missing closing brace `}' assumed here
    }
    ^